backup_individuals/sjeng/use_undefined_identifier/c2/comp_to_coord
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/comp_to_coord/src/utils.c:738:7: error: conflicting types for 'comp_to_coord'
void  comp_to_coord( char *str, move_s move) 
      ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/comp_to_coord/src/protos.h:15:6: note: previous declaration is here
void comp_to_coord (move_s move, char str[]);
     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/comp_to_coord/src/utils.c:790:41: error: use of undeclared identifier 'dword_41E820'
sprintf( str, "%c@%c%d", ( unsigned int)dword_41E820[move.promoted], ( unsigned int)v2, ( unsigned int)v3); 
                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/comp_to_coord/src/obj/utils.o] Error 1
